[TASK] Show configuration in backend module

--- a/Resources/Private/Templates/VarnishCache/Index.html
+++ b/Resources/Private/Templates/VarnishCache/Index.html
@@ -36,4 +36,12 @@
 			<f:form.submit  class="neos-button neos-button-primary" value="Clear by tags" />
 		</fieldset>
 	</f:form>
+	<legend>Configuration</legend>
+	<dl class="dl-horizontal">
+		<dt>Varnish URL</dt><dd>{settings.varnishUrl}</dd>
+		<dt>Default maximum age</dt><dd>{f:if(condition: settings.cacheHeaders.defaultSharedMaximumAge, then: '{settings.cacheHeaders.defaultSharedMaximumAge} s', else: 'N/A')}</dd>
+		<dt>Ignored cache tags</dt><dd>
+			{f:if(condition: settings.ignoredCacheTags, else: 'N/A')}<f:for each="{settings.ignoredCacheTags}" as="ignoredCacheTag"><span class="neos-label">{ignoredCacheTag}</span></f:for>
+		</dd>
+	</dl>
 </f:section>
