--- a/Resources/Private/Templates/VarnishCache/SearchForNode.html
+++ b/Resources/Private/Templates/VarnishCache/SearchForNode.html
@@ -41,7 +41,7 @@
 								</f:if></td>
 								<td class="neos-action">
 									<button class="neos-button" data-toggle="modal" href="#{node.identifier}" title="Additional info" data-check-url="{f:uri.action(action: 'checkUrl', arguments: {url: url})}"><i class="icon-info-sign"></i></button>
-									<f:link.action action="purgeCache" arguments="{node: node, searchWord: searchWord}" class="neos-button" title="Clear cache"><i class="icon-bolt"></i></f:link.action>
+									<f:link.action action="purgeCache" arguments="{node: node, searchWord: searchWord}" class="neos-button clear-cache" title="Clear cache"><i class="icon-bolt"></i></f:link.action>
 									<div class="neos-hide" id="{node.identifier}">
 										<div class="neos-modal">
 											<div class="neos-modal-header">
@@ -83,6 +83,17 @@
 					});
 					$('#url-check-loading', modalContent).hide();
 					modalContent.append(list);
+				});
+			});
+			$('.clear-cache').on('click', function(e) {
+				e.preventDefault();
+				var button = $(this);
+				button.html('<span class="neos-ellipsis"></span>');
+				$.ajax($(this).attr('href')).done(function(response, status, xhr) {
+					if (status !== 'success') {
+						alert('An error occurred while clearing the cache.')
+					}
+					button.html('<i class="icon-bolt"></i>');
 				});
 			});
 		})(jQuery);
