[TASK] Improve support for multi-site installations

--- a/Resources/Private/Templates/VarnishCache/Index.html
+++ b/Resources/Private/Templates/VarnishCache/Index.html
@@ -1,18 +1,18 @@
 <f:layout name="BackendSubModule" />
 
 <f:section name="content">
-	<f:render partial="Module/SearchForm" />
+	<f:render partial="SearchForm" arguments="{activeSites: activeSites}" />
 	<f:form action="purgeAllVarnishCache">
 		<fieldset>
 			<legend>Clear all cache</legend>
-			<div class="neos-row-fluid">
+			<div class="neos-row">
 				<f:if condition="{activeSites -> f:count()} > 0">
-					<div class="neos-span2">
+					<div class="neos-span3">
 						<div>
 							<label for="site">Site</label>
 						</div>
 						<div>
-							<f:form.select name="site" options="{activeSites}" optionLabelField="name" prependOptionLabel="All" class="neos-span12" />
+							<f:form.select name="site" id="site" options="{activeSites}" optionLabelField="name" prependOptionLabel="All" class="neos-span3" />
 						</div>
 					</div>
 				</f:if>
@@ -21,18 +21,18 @@
 						<label class="neos-control-label" for="contentType">Content-type</label>
 					</div>
 					<div>
-						<f:form.textfield name="contentType" placeholder="e.g. image/png" class="neos-input-large" />
+						<f:form.textfield name="contentType" id="contentType" placeholder="e.g. image/png" class="neos-span3" />
 						<f:form.submit class="neos-button neos-button-primary" value="Clear all cache!" />
 					</div>
 				</div>
 			</div>
 		</fieldset>
 	</f:form>
-	<f:form action="purgeCacheByTagsAction">
+	<f:form action="purgeCacheByTags">
 		<fieldset>
 			<legend>Clear cache by tags</legend>
-			<label class="neos-control-label" for="tags">Tags</label>
-			<f:form.textfield name="tags" placeholder="e.g. NodeType_TYPO3_Neos-Document" class="neos-input-xxlarge" required="required" />
+			<label class="neos-control-label" for="tags">Tags (comma-separated)</label>
+			<f:form.textfield name="tags" id="tags" placeholder="e.g. NodeType_TYPO3_Neos-Document" class="neos-input-xxlarge" required="required" />
 			<f:form.submit  class="neos-button neos-button-primary" value="Clear by tags" />
 		</fieldset>
 	</f:form>
