[TASK] Remove note about search being case-sensetive

--- a/Resources/Private/Partials/SearchForm.html
+++ b/Resources/Private/Partials/SearchForm.html
@@ -15,7 +15,7 @@
 				</f:if>
 				<div class="neos-span5">
 					<div>
-						<label class="neos-control-label" for="searchWord">Term (case-sensitive)</label>
+						<label class="neos-control-label" for="searchWord">Term</label>
 					</div>
 					<div>
 						<f:form.textfield name="searchWord" id="searchWord" placeholder="Search for node" value="{searchWord}" required="required" class="neos-span3" />
